--- a/src/color-variables.scss
+++ b/src/color-variables.scss
@@ -2,4 +2,5 @@ $primary-text: #0f172a;
 $secondary-text: #475569;
 $primary-color: #8455ff;
 $secondary-color: #5222d0;
-$light-color: #b79ff7;
+$light-primary-color: #b79ff7;
+$bg-secondary: #351686;
